@@ -1,3 +1,12 @@
+[b][color=orange]v4.46[/color], xx.xx.2020[/b][list]
+[*]Updated some skins.
+[*]Changed the texture on BigWigs/Details.
+[*]Changed the Vehicle Exit Button texture. #82
+[*]Added option for the MicroBar to change the backdrop. #75
+[*]Use different Role Icons on the UnitFrames. Thx Peri
+[*]Updated TooltipIcons.[/list]
+
+
 [b][color=orange]v4.45[/color], 10.02.2020[/b][list]
 [*]Fix errors on install, if ElvUI install is not finished:
    always make sure you finish first the ElvUI install!![/list]
